# pgl

./: .gitignore  CMakeLists.txt  Makefile  README.md  area_plotgr.c  gdk_plotpr.c  pgl.h  primitives.c  primitives.h  ps_plotpr.c  svg_plotpr.c  test.c
