cmake_minimum_required(VERSION 2.8)
project(pgl)
find_package(PkgConfig)
if(PKG_CONFIG_FOUND)
   pkg_check_modules (GLIB2 glib-2.0 REQUIRED)
   include_directories(${GLIB2_INCLUDE_DIRS})
   pkg_check_modules(GTK2 gtk+-2.0 REQUIRED)
   include_directories(${GTK2_INCLUDE_DIRS})
   #pkg_check_modules(LIBXML2 libxml-2.0 REQUIRED)
   #include_directories(${LIBXML2_INCLUDE_DIR})
else()
    message(SEND_ERROR "No pkg-config found")
endif(PKG_CONFIG_FOUND)
include_directories(${CMAKE_CURRENT_SOURCE_DIR})
set(SOURCE_LIB gdk_plotpr.c primitives.c ps_plotpr.c svg_plotpr.c)
add_library(pgl SHARED ${SOURCE_LIB} ${LIBXML2_LIBRARY})
target_link_libraries(pgl ${GTK2_LIBRARIES})
add_executable(test test.c)
target_link_libraries(test pgl ${GTK2_LIBRARIES})
install(TARGETS pgl DESTINATION lib)
install(FILES pgl.h DESTINATION include)

